[package]
name = "rosty"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.16"
failure = "0.1"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
crossbeam = "0.7"
once_cell = "1.3"
async-std = "1.5"
futures = "0.3"
xmlrpc = {path="../rosty_xmlrpc", package="rosty_xmlrpc"}