[package]
name = "rosty_msg_fmt"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
error-chain = "0.12"
lazy_static = "1.4"
regex = "1.3"
md-5 = "0.8"
hex = "0.4"