[package]
name = "rosty_xmlrpc"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
hyper="0.13"
serde = "1.0"
base64 = "0.11"
regex = "1.3"
serde-xml-rs = "0.3"
serde_bytes = "0.11"
serde_derive = "1.0"
xml-rs = "0.8"
error-chain = "0.12"
lazy_static = "1.4"
futures = "0.3"
