[package]
name = "rosty_xmlrpc_fmt"
version = "0.1.0"
authors = ["Bas Zalmstra <bzalmstra@smart-robotics.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
base64 = "0.11"
regex = "1.3"
serde-xml-rs = "0.3"
serde_bytes = "0.11"
serde_derive = "1.0"
xml-rs = "0.8"
error-chain = "0.12"
lazy_static = "1.4"
